--- a/src/app/components/feed/feed-select-principles/feed-select-principles.component.html
+++ b/src/app/components/feed/feed-select-principles/feed-select-principles.component.html
@@ -1,26 +1,15 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<mat-card [ngClass]="{'fair-card--selected': this.isSelected}"
+          appearance="outlined"
+          class="fair-card cursor-pointer"
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> Indicator </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Category </th>
-        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Difficulty </th>
-        <td mat-cell *matCellDef="let element"> {{element.difficulty}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+>
+  <mat-card-header>
+    <mat-card-title-group>
+      <mat-card-title>{{ title }}</mat-card-title>
+      <mat-card-subtitle>Difficulty: {{ difficulty }} / 5</mat-card-subtitle>
+    </mat-card-title-group>
+  </mat-card-header>
+  <mat-card-content>
+    {{ description }}
+  </mat-card-content>
+</mat-card>
