Final steps on feed

--- a/src/app/components/raise-instance/raise-instance.component.html
+++ b/src/app/components/raise-instance/raise-instance.component.html
@@ -56,6 +56,11 @@
           </mat-tree>
 
         </mat-card-content>
+        <mat-card-actions>
+          <button (click)="this.handleApplyIndicators()" color="primary" mat-raised-button
+                  type="button">Apply indicators
+          </button>
+        </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="1" [rowspan]="1">
