--- a/src/app/components/verifications/verifications.component.html
+++ b/src/app/components/verifications/verifications.component.html
@@ -1,8 +1,33 @@
 <div *ngIf="this.dataSource.data.length > 0">
   <table [dataSource]="dataSource" class="mat-elevation-z8" mat-table>
-    <ng-container matColumnDef="position">
-      <th *matHeaderCellDef mat-header-cell> No.</th>
-      <td *matCellDef="let element" mat-cell> {{ element.datasetId }}</td>
+    <ng-container matColumnDef="datasetName">
+      <th *matHeaderCellDef mat-header-cell> Dataset</th>
+      <td *matCellDef="let element" mat-cell> {{ element.datasetName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="repositoryName">
+      <th *matHeaderCellDef mat-header-cell> Repository</th>
+      <td *matCellDef="let element" mat-cell> {{ element.repositoryName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="fairPrincipleName">
+      <th *matHeaderCellDef mat-header-cell> Indicator</th>
+      <td *matCellDef="let element" mat-cell> {{element.fairPrinciplePrefix }}: {{element.fairPrincipleName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="fairCategory">
+      <th *matHeaderCellDef mat-header-cell> FAIR Principle</th>
+      <td *matCellDef="let element" mat-cell> {{ element.fairCategory }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="authorName">
+      <th *matHeaderCellDef mat-header-cell> Author</th>
+      <td *matCellDef="let element" mat-cell> {{ element.authorName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="verificationDate">
+      <th *matHeaderCellDef mat-header-cell> Date</th>
+      <td *matCellDef="let element" mat-cell> {{ element.verificationDate | date  }}</td>
     </ng-container>
 
     <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
