Refactor validations and verifications

--- a/src/app/components/compliance/compliances.component.html
+++ b/src/app/components/compliance/compliances.component.html
@@ -1,4 +1,4 @@
-<div *transloco="let t; prefix: 'verifications'">
+<div *transloco="let t; prefix: 'compliance'">
   <div *ngIf="this.dataSource.data.length > 0">
     <table [dataSource]="dataSource" class="mat-elevation-z8 cursor-pointer" mat-table>
       <ng-container matColumnDef="datasetName">
