--- a/src/app/components/validate/validate.component.html
+++ b/src/app/components/validate/validate.component.html
@@ -132,7 +132,7 @@
                         (click)="this.handleDoVerification()"
                         mat-button
                         matStepperNext
-                        type="button">Verify
+                        type="button">Validate
                 </button>
             </mat-card-actions>
         </mat-card-content>
@@ -142,14 +142,14 @@
             <mat-card-title>Thanks</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            You have submitted your verifications
+            You have submitted your compliances
         </mat-card-content>
         <mat-card-actions>
             <button
-                    (click)="this.handleGoToVerifications()"
+                    (click)="this.handleGoToCompliances()"
                     mat-button
                     matStepperNext
-                    type="button">Verify more indicators
+                    type="button">Validate more indicators
             </button>
         </mat-card-actions>
     </mat-step>
