--- a/src/app/components/validate/validate.component.scss
+++ b/src/app/components/validate/validate.component.scss
@@ -25,3 +25,39 @@
 .col:last-child {
   margin-right: 0;
 }
+
+.validation-card-header {
+  margin-bottom: 35px;
+}
+
+.data-info {
+  font-size: 25px;
+  font-style: oblique;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.details {
+  font-size: 12px;
+}
+
+.entity-name {
+  font-weight: bold;
+}
+
+
+.textearea-field {
+  height: 150px;
+}
+
+
+.negative-comment {
+  margin-top: 20px;
+}
+
+.validation-card-actions {
+  margin-top: 50px;
+}
